fix(skill-server): externalws L2 路由切换为每实例自管 + ZSET 花名册 (#30)
* fix(skill-server): externalws L2 路由切换为每实例自管 + ZSET 花名册

旧 external-ws:registry:{domain} 共享 hash 的 TTL 设在 hash key 上，任一活实例的
EXPIRE 续整个 hash → 死实例字段被无限期续命，L2 投递选中死 pod → 消息静默丢失。
线上观测：kill -9 一天后死字段仍在；手动 DEL 后因 EXPIRE 是 no-op，无法重建。

架构反转（owner-only writes，消除跨实例 TTL 污染）：
- 删除共享 hash external-ws:registry:{domain}
- 新增 external-ws:held-by:{instanceId} HASH（每实例自管 {domain → count}）
- 新增 instance:roster ZSET（活实例花名册，score = unix-ms 心跳时间）
- findInstanceWithConnection 改为 listAlive + pipelined HGET，选第一个 count>0

寿命管理：
- ExternalStreamHandler 心跳 30s → 10s（与 SkillInstanceRegistry 对齐）
- 整批 putAll snapshot；snapshot 空则 DEL key
- @PreDestroy DEL held-by:{selfId} 加速感知
- SkillInstanceRegistry.writeHeartbeat 追加 ZADD roster + lazy ZREMRANGEBYSCORE GC

不依赖 SCAN/KEYS（项目硬性约束）；不引入 Redis 7.4 HEXPIRE（厂商兼容性未确认）。

行为保证：
- kill -9 后 ≤ 30s 内死实例从 roster 过期 → L2 不再选中
- DEL held-by/roster 后下次心跳自动重建（HSET 而非 EXPIRE）
- TTL = 30s = 3× heartbeat，留出 GC pause / 抖动余量

任务文档：.trellis/tasks/05-14-externalws-l2-stale-pod/prd.md
研究依据：industry-ws-presence-routing.md / redis-presence-patterns.md /
         sticky-routing-owner-election.md

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>

* chore: refresh gitnexus stats after externalws fix

11277 → 11893 symbols, 28114 → 29476 relationships.
Auto-updated by `npx gitnexus analyze` post-commit per CLAUDE.md.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>

* chore(task): archive 05-12-gateway

* chore(task): archive 05-14-externalws-l2-stale-pod

* chore: record journal

* chore(task): remove old paths post-archive (05-12 + 05-14)

Both tasks archived to .trellis/tasks/archive/2026-05/;
removing the now-empty live paths from git tracking.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>

---------

Co-authored-by: Claude Opus 4.7 (1M context) <noreply@anthropic.com>